finish serviceStat
